add multiThread and copy to HDFS

--- a/Multicast/MulticastConfig.conf
+++ b/Multicast/MulticastConfig.conf
@@ -1,8 +1,13 @@
 Inet_Address = 228.1.1.1
+	#IP addresses are in the range 224.0.0.0 to 239.255.255.255
 
 Input_File_Address = blueshit.mp4
 
-Output_File_Address = blueshit(copy).mp4
+Output_File_Address = temp.mp4
+	#Temp saving address
+
+HDFS_File_Address = hdfs://localhost:54310/blueshit(copy).mp4
+	#localhost:xxxxx is based on datanode setting
 
 Port = 1234
 
