combine gui with socket class

--- a/Computer-Network/Assignment3/Makefile
+++ b/Computer-Network/Assignment3/Makefile
@@ -3,10 +3,20 @@ JAVAC=javac
 sources = $(wildcard src/*.java)
 classes = $(sources:.java=.class)
 
-all: $(classes)
+# all: $(classes)
+all: GUI
 
 clean :
 	rm -f FileSocket/*.class
 
-%.class : %.java
-	$(JAVAC) $< -d .
+# %.class : %.java
+# $(JAVAC) $< -d .
+
+Server :
+	$(JAVAC) src/Server.java -d .
+
+Client :
+	$(JAVAC) src/Client.java -d .
+
+GUI : Server Client
+	$(JAVAC) src/GUI.java -d .
