add key listener

--- a/CNetwork/Assignment3-Ex/Makefile
+++ b/CNetwork/Assignment3-Ex/Makefile
@@ -7,8 +7,8 @@ classes = $(sources:.java=.class)
 all: GUI
 
 clean :
-	rm -f FileSocket/*.class
 	rm -f Downloads/*
+	rm -rf FileShare/
 
 # %.class : %.java
 # $(JAVAC) $< -d .
